# placeholder

./: .gitignore  .hgtags  .travis.yml  404.html  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  README.txt  __init__.py  index.html  mkdocs.yml  objects.inv  partial.c  placeholder.py  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test.py  tests.py
.github/workflows/: build.yml  codspeed.yml  release.yml
docs/: conf.py  examples.ipynb  index.rst  reference.md  reference.rst  requirements.in  requirements.txt
examples/: index.html
placeholder/: __init__.py  partials.c
reference/: index.html
search/: search_index.json
tests/: conftest.py  requirements.in  test_all.py
