[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "placeholder"
dynamic = ["version"]
description = "Operator overloading for fast anonymous functions."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["functional", "lambda", "scala", "underscore"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/placeholder"
Documentation = "https://coady.github.io/placeholder"
Changelog = "https://github.com/coady/placeholder/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/placeholder/issues"

[tool.setuptools]
packages = ["placeholder"]

[tool.setuptools.dynamic]
version = {attr = "placeholder.__version__"}

[tool.setuptools.package-data]
placeholder = ["py.typed"]

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]

[tool.coverage.run]
source = ["placeholder"]
branch = true
