[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "placeholder"
version = "1.5"
description = "Operator overloading for fast anonymous functions."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["functional", "lambda", "scala", "underscore"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/placeholder"
Documentation = "https://coady.github.io/placeholder"
Changelog = "https://github.com/coady/placeholder/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/placeholder/issues"

[tool.setuptools]
packages = ["placeholder"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["placeholder"]
branch = true

[tool.pytest.ini_options]
markers = ["benchmark"]

[dependency-groups]
dev = [
    "setuptools",
    "pytest-cov",
    "pytest-codspeed",
    "pytest-parametrized",
    "ruff",
    "mypy",
    "mkdocstrings[python]",
    "mkdocs-jupyter",
]
