[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "placeholder"
version = "1.5.1"
description = "Operator overloading for fast anonymous functions."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["functional", "lambda", "underscore", "partial"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/coady/placeholder"
Documentation = "https://coady.github.io/placeholder"
Changelog = "https://github.com/coady/placeholder/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/placeholder/issues"

[tool.setuptools.package-data]
placeholder = ["*.c"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.coverage.run]
source = ["placeholder"]
branch = true

[tool.pytest.ini_options]
markers = ["benchmark"]

[dependency-groups]
dev = ["setuptools", "pytest-cov", "pytest-codspeed", "pytest-parametrized"]
docs = ["mkdocstrings[python]", "mkdocs-jupyter"]
