[metadata]
name = placeholder
version = attr: placeholder.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Operator overloading for fast anonymous functions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/placeholder
license = Apache Software License
keywords = functional, lambda, scala, underscore
project_urls =
    Documentation = https://coady.github.io/placeholder
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed

[options]
zip_safe = False
packages = placeholder
python_requires = >=3.7

[options.package_data]
placeholder = py.typed

[flake8]
max-line-length = 100

[coverage:run]
source = placeholder
branch = True
